k8s/22-gateway-api/nginx-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-frontend
  name: nginx-frontend
spec:
  containers:
  - image: spurin/nginx-debug
    name: nginx-frontend
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
