k8s/22-gateway-api/httpsroute-api-v2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mygateway-app
  namespace: myns
spec:
  parentRefs:
  - name: edge-gw
    namespace: gateway-system
    sectionName: https
  hostnames:
  - "mygateway-app.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-frontend
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: nginx-api
      port: 80
      weight: 50
    - name: nginx-api-v2
      port: 80
      weight: 50  
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    backendRefs:
    - name: nginx-admin
      port: 80
